@@ -75,6 +75,16 @@ class Affiliates_Dashboard_Registration_Block extends Affiliates_Dashboard_Regis
 		//	array(),
 		//	AFFILIATES_CORE_VERSION
 		// );
+
+		if ( !wp_script_is( 'affiliates' ) ) {
+			affiliates_wp_enqueue_scripts();
+		}
+		wp_enqueue_style( 'affiliates' );
+
+		if ( !wp_script_is( 'affiliates-fields' ) ) {
+			wp_register_style( 'affiliates-fields', AFFILIATES_PLUGIN_URL . 'css/affiliates-fields.css', array(), AFFILIATES_CORE_VERSION, 'all' );
+		}
+		wp_enqueue_style( 'affiliates-fields' );
 	}
 
 	/**
